force-app/main/default/objects/TTS_Protection_Family__c/TTS_Protection_Family__c.object-meta.xml
<CustomObject>
    <description>Groups related protection records, such as filings for one technology across multiple jurisdictions.</description>
    <label>Protection Family</label>
    <nameField>
        <displayFormat>PF{00000}</displayFormat>
        <label>Protection Family ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protection Families</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>