force-app/main/default/objects/TTS_Protection_Family__c/fields/Additional_notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_notes__c</fullName>
    <description>Stores supplementary context about the protection family.</description>
    <inlineHelpText>Enter relevant family notes not captured by the reference, date, or technology fields.</inlineHelpText>
    <label>Additional notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>