force-app/main/default/objects/TTS_Protection_Family__c/fields/Earliest_Priority_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Priority_Date__c</fullName>
    <description>Stores the earliest priority date among protection records grouped in the family.</description>
    <inlineHelpText>Enter the earliest priority date claimed by any protection in this family.</inlineHelpText>
    <label>Earliest Priority Date</label>
    <type>Date</type>
</CustomField>