force-app/main/default/objects/TTS_Protection_Family__c/fields/Name_Reference__c.field-meta.xml
<CustomField>
    <fullName>Name_Reference__c</fullName>
    <description>Stores the human-readable name or reference used for the protection family.</description>
    <inlineHelpText>Enter the family name, docket number, or other recognised reference.</inlineHelpText>
    <label>Name/Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>