force-app/main/default/objects/TTS_Protection_Family__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the protection family to the related Technology record.</description>
    <inlineHelpText>Select the technology covered by the protections in this family.</inlineHelpText>
    <label>Technology</label>
    <referenceTo>TTS_Technology__c</referenceTo>
    <relationshipLabel>Protection Families</relationshipLabel>
    <relationshipName>Protection_Families</relationshipName>
    <type>Lookup</type>
</CustomField>