force-app/main/default/objects/TTS_Protection_Family__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Technology__c</columns>
    <columns>Additional_notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>